package ecommerce.Enums;

public enum StatusEmail {
    PROCESSING,
    SENT,
    ERROR;
}
